--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-r
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 env_logger = "0.9"
+log = "0.4"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
