--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -1,7 +1,10 @@
-application_port: 8000
+application:
+  port: 8000
+
 database:
   host: "localhost"
   port: 5432
   username: "postgres"
   password: "password"
   database_name: "newsletter"
+
