--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,13 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
+unicode-segmentation = "1"
+validator = "0.16"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
 once_cell = "1"
+claims = "0.7"
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
