--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,12 @@ tracing-actix-web = "0.7"
 unicode-segmentation = "1"
 validator = "0.16"
 
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+features = ["json", "rustls-tls"]
+
 [dev-dependencies]
-reqwest = { version = "0.11", features = ["json"] }
 once_cell = "1"
 claims = "0.7"
 fake = "~2.3"
