--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -8,3 +8,6 @@ database:
   password: "password"
   database_name: "newsletter"
 
+email_client:
+  base_url: "localhost"
+  sender_email: "test@gmail.com"
