--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tracing-actix-web = "0.7"
 unicode-segmentation = "1"
 validator = "0.16"
 serde-aux = "4"
+rand = { version = "0.8", features=["std_rng"] }
 
 [dependencies.reqwest]
 version = "0.11"
