--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ unicode-segmentation = "1"
 validator = "0.16"
 serde-aux = "4"
 rand = { version = "0.8", features=["std_rng"] }
+thiserror = "1"
 
 [dependencies.reqwest]
 version = "0.11"
