--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde-aux = "4"
 rand = { version = "0.8", features=["std_rng"] }
 thiserror = "1"
 anyhow = "1"
+base64 = "0.21"
 
 [dependencies.reqwest]
 version = "0.11"
