--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ hex = "0.4"
 [dependencies.reqwest]
 version = "0.11"
 default-features = false
-features = ["json", "rustls-tls"]
+features = ["json", "rustls-tls", "cookies"]
 
 [dev-dependencies]
 once_cell = "1"
