--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ base64 = "0.21"
 argon2 = { version = "0.4", features = ["std"] }
 urlencoding = "2"
 htmlescape = "0.3"
+actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
 
 [dependencies.reqwest]
 version = "0.11"
