--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ urlencoding = "2"
 htmlescape = "0.3"
 actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
 actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
+serde_json = "1"
 
 [dependencies.reqwest]
 version = "0.11"
