--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ htmlescape = "0.3"
 actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
 actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
 serde_json = "1"
+actix-web-lab = "0.18"
 
 [dependencies.reqwest]
 version = "0.11"
