--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,3 +55,4 @@ serde_json = "1"
 tokio = { version = "1", features = ["rt", "macros"] }
 wiremock = "0.5"
 linkify = "0.9"
+serde_urlencoded = "0.7.1"
